drone and DroneTypes are working by dynamics its fetching data its suppose to give only one drone out but its giving more than one drone out